Added a Thumbnail and changed the code to reference that image

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <head>
 
         <!-- Open Graph Protocol -->
-        <meta property="og:image" content="https://repository-images.githubusercontent.com/316998486/bda83280-3263-11eb-8ed0-1155d6e2c259">
+        <meta property="og:image" content="images/Thumbnail.jpg">
         <meta property="og:image:type" content="image/jpg">
         <meta property="og:image:width" content="1280">
         <meta property="og:image:height" content="640">
-        <meta property="og:type" content="website" />
+        <meta property="og:type" content="website"/>
         <meta property="og:url" content="https://leg4cy.github.io/"/>
         <meta property="og:title" content="HR Personal Webpage & Portfolio" />
         <meta property="og:description" content="My intention is to show a bit more about myself here, and also show some of the open-source projects I have worked/collaborated at." />
