--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <meta property="og:image:height" content="640">
         <meta property="og:type" content="website"/>
         <meta property="og:url" content="https://leg4cy.github.io/"/>
-        <meta property="og:title" content="HR Personal Webpage & Portfolio" />
-        <meta property="og:description" content="My intention is to show a bit more about myself here, and also show some of the open-source projects I have worked/collaborated at." />
+        <meta property="og:title" content="HR Personal Webpage" />
+        <meta property="og:description" content="My intention is to show a bit more about myself here." />
 
-        <title>HR Personal Webpage & Portfolio</title>
+        <title>HR Personal Webpage</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="shortcut icon" href="images/hr.ico">
@@ -53,9 +53,9 @@
                 <ul class="links">
                     <li><a href="#banner">Home</a></li>
                     <li><a href="#one">About</a></li>
-                    <li><a href="#two">Skills</a></li>
-                    <li><a href="#three">CV & Certifications</a></li>
-                    <li><a href="#four">Portfolio</a></li>
+                    <li><a href="#two">Programming Skills</a></li>
+                    <!-- <li><a href="#three">CV & Certifications</a></li>
+                    <li><a href="#four">Portfolio</a></li> -->
                     <li><a href="#footer">Contact Me</a></li>
                 </ul>
                 <a href="#" class="close">Close</a>
@@ -70,11 +70,10 @@
                 </div>
                 <h2>Hugo Rodrigues</h2>
                 <p><strong>34 yo, Portuguese, Happily Married, Wizard, Ravenclaw, Hero Wannabe</strong></p>
-                <p><strong>Full Stack Developer</strong> <i>// Some say "What kind of Sorcery is this!?"</i></p>
+                <p><strong>Junior Project Manager</strong> <i>// Some say "What kind of Sorcery is this!?"</i></p>
                 <p class=academiadecodigo><strong>&lt;Code Cadet&gt; @ <a href="https://www.academiadecodigo.org/">&lt;Academia de Código_ &gt;</strong></a>
                 </p>
-                <p><strong>Junior Full Stack Engineer @ CodeCademy</strong> <i>// On-going project</i></p>
-                <p><strong>Passionate about technology since early age, Front End Development and Cyber Security</strong></p>
+                <p><strong>Passionate about human relations and technology since early age, also keen curiousity towards Cyber Security</strong></p>
                 <p><strong>Already worked in the Digital Entertainment Industry for </strong>
                     <a href="https://supercell.com/en/" target="_blank" rel="noopener noreferrer">Supercell</a>
                     <strong>&& </strong>
@@ -95,26 +94,22 @@
                             it all, piece by piece. I still remember it as if it was today, the shock reaction when my mom came into the room and started screaming with her hands over her hair and saying "You will never be able to get all of it together
                             - ever!" :)</p>
 
-                        <p>However, I ended up not following the technology area, in fact, I started working in the Port of Lisbon, where I have worked for more than 8 years of my life. When I felt psychologically prepared to take a university course, I
+                        <p>However, I ended up not following the technological area, in fact, I started working in the Port of Lisbon, where I have worked for more than 8 years of my life. When I felt psychologically prepared to take a university course, I
                             ended up choosing Marketing & Advertising, because I also want to understand how people's minds work in terms of a willingness to acquire something and at the same time, making the brand of what they acquired as an extension
-                            of their person && personality.
+				of their person && personality (ex.: what Apple did).</p>
 
                             <p>I believe this passion for how humans behave in Society appeared during my experience in Aveiro, while working for ACAD - Associação Cultural de Aradas. This association was created with the pretext of joining people together
                                 from the Parish of Aradas with the Cultural pretext, while getting to know each other better in the neighboor.</p>
 
                             <p>Then I've worked here and there, for great brands in the Digital Entertainment, such as
-                                <strong>Supercell && Ubisoft</strong> and it was while I was working for the later on, that I've realized that what I really love, it's programming. I love to find solutions for common problems. In fact, I started working
+                                <strong>Supercell && Ubisoft</strong> and it was while I was working for the later on, that I've realized that what I really love is to find creative solutions for common problems. In fact, I started working
                                 next to the Developer team regarding some Legacy issues the game had that were persisting for some time. Unfortunately not everything was smooth sailing, and eventually I had to abandon that ship because there were no perspectives
                                 of developing myself further within this industry, even as a Brand Manager.</p>
 
-                            <p>Nowadays I am studying Fullstack, but I believe my main strength reveals itself within the Frontend, because I know how to work with Image Edition tools, such as Adobe Photoshop <i>/* which I have been using for 20 years now */</i>
-                                I am currently working in my Portfolio with CodeCademy, since I don't have that many projects that I can show from &lt;Academia de Código_ &gt;, and I do hope you take your time to see them and call me for an interview
-                                :)
-                            </p>
+                            <p>Nowadays I am currently taking a Professional Certificate in Project Management by Google.</p>
 
-                            <p>Another thing that I believe that is extremely important, I am looking for a Company that is able to take me with open arms and build a long-lasting relationship. I wish to have a mentor to look up to, and I do want to learn
-                                from that person as much as possible.
-                            </p>
+                            <p>Another thing that I believe that is extremely important to say is: I am looking for a Company that is able to take me with open arms and build a long-lasting relationship. I wish to have a mentor to look up to, and I do want to learn
+                                from that person as much as possible.</p>
                     </div>
                 </div>
             </section>
@@ -125,7 +120,7 @@
                     <a href="#" class="image"><img src="https://www.udacity.com/assets/iridium/images/homepage/shared/icons/school-cards/dev_icon.png" alt="" />
                     </a>
                     <div class="content">
-                        <h2 class="major">My Magic</h2>
+                        <h2 class="major">Programming Magic</h2>
                         <p><strong>OOP Language:</strong> Java</p>
                         <p><strong>Project Framework Management:</strong> Maven, Spring Framework (MVC)</p>
                         <p><strong>Work Methodology:</strong> Agile Software Development || KANBAN || Scrum</p>
@@ -141,7 +136,7 @@
                 </div>
             </section>
 
-            <!-- Three -->
+            <!-- Three
             <section id="three" class="wrapper spotlight style3">
                 <div class="inner">
                     <a href="#" class="image"><img src="images/cv_icon.png" alt="" /></a>
@@ -162,7 +157,7 @@
 
                     </div>
                 </div>
-            </section>
+            </section> -->
 
             <!-- Four
 			<section id="four" class="wrapper alt style1">
@@ -197,7 +192,7 @@
         <section id="footer">
             <div class="inner">
                 <h2 class="major">Contact Me</h2>
-                <p>Down here you can find some links to my online profiles: Linkedin, Github. Be at ease to check some of the work I have developed, which companies I've already worked for, and if you want to work with me, feel free to text me.</p>
+                <p>Down here you can find some links to my online profiles: Linkedin, Github.</p>
                 <ul class="contact">
                     <li class="icon solid fa-home">Lisbon - Portugal</li>
                     <li class="icon solid fa-phone"><a href="tel:+351916494897" target="_blank" rel="noopener noreferrer">(+351) 916 494 897</a></li>
